--- a/files.in
+++ b/files.in
@@ -46,13 +46,13 @@ $(CURDIR)/build/dma.o: $(CURDIR)/src/dma.c
 	$(CC) $(CFLAGS) -c -o $(CURDIR)/build/dma.o $(CURDIR)/src/dma.c
 $(CURDIR)/build/inthandler.o: $(CURDIR)/src/inthandler.S
 	mkdir -p $(CURDIR)/build
-	$(CC) -c -o $(CURDIR)/build/inthandler.o $(CURDIR)/src/inthandler.S
+	$(CC) $(ASFLAGS) -c -o $(CURDIR)/build/inthandler.o $(CURDIR)/src/inthandler.S
 $(CURDIR)/build/entrypoint.o: $(CURDIR)/src/entrypoint.S
 	mkdir -p $(CURDIR)/build
-	$(CC) -c -o $(CURDIR)/build/entrypoint.o $(CURDIR)/src/entrypoint.S
+	$(CC) $(ASFLAGS) -c -o $(CURDIR)/build/entrypoint.o $(CURDIR)/src/entrypoint.S
 $(CURDIR)/build/halt.o: $(CURDIR)/src/halt.S
 	mkdir -p $(CURDIR)/build
-	$(CC) -c -o $(CURDIR)/build/halt.o $(CURDIR)/src/halt.S
+	$(CC) $(ASFLAGS) -c -o $(CURDIR)/build/halt.o $(CURDIR)/src/halt.S
 
 # Rules for compiling filesystem
 $(CURDIR)/build/dragonfs.o: $(CURDIR)/src/dragonfs.c
@@ -104,7 +104,7 @@ $(CURDIR)/build/system.o: $(CURDIR)/src/system.c
 # Rules for compiling c++ extras
 $(CURDIR)/build/entrypoint_2.o: $(CURDIR)/src/entrypoint_2.S
 	mkdir -p $(CURDIR)/build
-	$(CC) -c -o $(CURDIR)/build/entrypoint_2.o $(CURDIR)/src/entrypoint_2.S
+	$(CC) $(ASFLAGS) -c -o $(CURDIR)/build/entrypoint_2.o $(CURDIR)/src/entrypoint_2.S
 $(CURDIR)/build/do_ctors.o: $(CURDIR)/src/do_ctors.c
 	mkdir -p $(CURDIR)/build
 	$(CC) $(CFLAGS) -c -o $(CURDIR)/build/do_ctors.o $(CURDIR)/src/do_ctors.c
