--- a/examples/dfsdemo/Makefile
+++ b/examples/dfsdemo/Makefile
@@ -5,13 +5,13 @@ MKDFSPATH = $(ROOTDIR)/bin/mkdfs
 HEADERPATH = $(ROOTDIR)/lib
 N64TOOL = $(ROOTDIR)/bin/n64tool
 HEADERNAME = header
-LINK_FLAGS = -G0 -L$(ROOTDIR)/lib -L$(ROOTDIR)/mips64-elf/lib -L$(ROOTDIR)/lib/gcc/mips64-elf/4.4.0 -ldragon -lmikmod -lc -lm -ldragonsys -lgcc -Tn64ld.x 
+LINK_FLAGS = -G0 -L$(ROOTDIR)/lib -L$(ROOTDIR)/mips64-elf/lib -ldragon -lmikmod -lc -lm -ldragonsys -Tn64ld.x -nostartfiles
 PROG_NAME = dfsdemo
 CFLAGS = -std=gnu99 -mabi=32 -march=vr4300 -mtune=vr4300 -O2 -G0 -Wall -Werror -I$(ROOTDIR)/include -I$(ROOTDIR)/mips64-elf/include
 ASFLAGS = -mtune=vr4300 -march=vr4300
 CC = $(GCCN64PREFIX)gcc
 AS = $(GCCN64PREFIX)as
-LD = $(GCCN64PREFIX)ld
+LD = $(GCCN64PREFIX)gcc
 OBJCOPY = $(GCCN64PREFIX)objcopy
 
 $(PROG_NAME).v64: $(PROG_NAME).elf test.dfs
