--- a/examples/test/Makefile
+++ b/examples/test/Makefile
@@ -5,13 +5,13 @@ MKDFSPATH = $(ROOTDIR)/bin/mkdfs
 HEADERPATH = $(ROOTDIR)/lib
 N64TOOL = $(ROOTDIR)/bin/n64tool
 HEADERNAME = header
-LINK_FLAGS = -L$(ROOTDIR)/lib -L$(ROOTDIR)/mips64-elf/lib -ldragon -lc -lm -ldragonsys -Tn64ld.x
+LINK_FLAGS = -L$(ROOTDIR)/lib -L$(ROOTDIR)/mips64-elf/lib -ldragon -lc -lm -ldragonsys -Tn64ld.x -nostartfiles
 PROG_NAME = test
 CFLAGS = -std=gnu99 -mabi=32 -march=vr4300 -mtune=vr4300 -O2 -Wall -Werror -I$(ROOTDIR)/include -I$(ROOTDIR)/mips64-elf/include
 ASFLAGS = -mtune=vr4300 -march=vr4300
 CC = $(GCCN64PREFIX)gcc
 AS = $(GCCN64PREFIX)as
-LD = $(GCCN64PREFIX)ld
+LD = $(GCCN64PREFIX)gcc
 OBJCOPY = $(GCCN64PREFIX)objcopy
 
 $(PROG_NAME).v64: $(PROG_NAME).elf test.dfs
